# SolomonoffLib

./: .gitignore  README.md  build.gradle  compile_repl.sh  install_library.sh  pom.xml  publish.sh  repl_integration_tests.sh  repl_unit_tests.sh  sample-native.mealy  sample.mealy  settings.gradle  solomonoff  solomonoff-native  test.mealy
cli/: pom.xml
native/:  calculator1.lalrpop   calculator1.rs  Cargo.toml
native/cli/: Cargo.toml  history.txt  test.py
native/cli/src/: main.rs
native/compiler/: Cargo.toml
native/compiler/src/: collect.rs  compilation_error.rs  debug.rs  e.rs  exact_size_chars.rs  external_function.rs  external_functions.rs  func_arg.rs  g.rs  ghost.rs  int_embedding.rs  int_queue.rs  int_seq.rs  lib.rs  logger.rs  main.rs  n.rs  ostia_compress.rs  p.rs  parser.rs  parser_state.rs  parser_utils.rs  pipeline.rs  ranged_evaluation.rs  ranged_graph.rs  ranged_optimisation.rs  ranged_serializers.rs  regular_operations.rs  repl.rs  repl_command.rs  seq.rs  solomonoff.lalrpop  solomonoff.rs  solomonoff_parser.lalrpop  submatch.rs  util.rs  v.rs
native/src/: collect.rs  compilation_error.rs  debug.rs  e.rs  exact_size_chars.rs  g.rs  ghost.rs  int_seq.rs  main.rs  n.rs  ostia_compress.rs  p.rs  parser.rs  parser_state.rs  parser_utils.rs  ranged_evaluation.rs  ranged_graph.rs  ranged_optimisation.rs  ranged_serializers.rs  regular_operations.rs  solomonoff.lalrpop  string_interner.rs  submatch.rs  utf8.rs  v.rs  void.rs
native/wasm/: Cargo.toml  LICENSE_MIT  debug.sh  index.css  index.html  index.js  release.sh
native/wasm/src/: lib.rs
(+400 files in other folders)
