[package]
name = "Solomonoff2"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.4"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
shredder = "0.1.2"