[package]
name = "solomonoff-lib"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.4"

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"
nonmax = "0.5.0"
wasm-timer = "0.2.5" # <-- this one is only really used when with --target web

[profile.release]
